@@ -85,6 +85,7 @@ export(provesti.dist)
 export(psex)
 export(read.genalex)
 export(recode_polyploids)
+export(resample.ia)
 export(reynolds.dist)
 export(rogers.dist)
 export(rraf)
